--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.43.1",
