--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "query-string": "^9.1.2",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.10.0",
